# WearTheApi

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: dev-pipeline.yml  prod-pipeline.yml  staging-pipeline.yml
api/: app.py
common/databases/postgresql/: config.py  utils.py
docs/: manual_deployment.md
migrations/: env.py
scripts/: build_services.sh  run_tests.sh
services/recommendation_service/: .dockerignore  Dockerfile  pyproject.toml
services/recommendation_service/app/: config.py  dependencies.py  logging_config.py  main.py
services/recommendation_service/app/api/v1/: endpoints.py  routes.py
services/recommendation_service/app/core/: exceptions.py
services/recommendation_service/app/schemas/: assets.py  base.py  recommendations.py  weather.py
services/recommendation_service/app/services/: weather_client.py
services/recommendation_service/app/services/recommendation_kernel/: engine.py  filters.py  parallel_filter.py
services/recommendation_service/app/services/recommendation_kernel/llm/: base.py  openai_handler.py  prompt_templates.py
services/recommendation_service/app/services/recommendation_kernel/retrieval/: base.py  json_retriever.py  vector_retrieval.py
services/recommendation_service/app/utils/: redis_cache.py
services/recommendation_service/local_data/: preprocess.py
services/recommendation_service/local_data/preprocessed/: clothing_data.json
services/recommendation_service/local_data/raw/: ClothingImagesDB.csv  ClothingImagesDBextended.csv
services/weather_service/: Dockerfile  WeatherServiceApi.md  pyproject.toml
services/weather_service/app/: config.py  dependencies.py  logging_config.py  main.py
services/weather_service/app/api/v1/: routes.py
services/weather_service/app/core/: exceptions.py
services/weather_service/app/schemas/: forecast.py  weather.py
services/weather_service/app/services/: __init__.py  cache_service.py  openweather.py
services/weather_service/tests/: conftest.py
services/weather_service/tests/test_api/test_v1/: test_routes.py
terraform/: .terraform.lock.hcl  provider.tf
terraform/.terraform/: terraform.tfstate
terraform/environments/dev/: main.tf
terraform/environments/dev/.terraform/modules/: modules.json
terraform/modules/database/: main.tf
terraform/modules/network/: main.tf  outputs.tf  variables.tf
terraform/modules/resource_group/: main.tf  outputs.tf  variables.tf
