[tool.poetry]
name = "weartheapi"
version = "0.1.0"
description = ""
authors = ["fertlopus <marat.movlamov@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
openai = "^1.51.0"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
llama-index = "^0.11.16"
langchain = "^0.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
